--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "@rollup/plugin-commonjs": "21.0.1",
     "@rollup/plugin-node-resolve": "13.0.6",
     "@rollup/plugin-typescript": "8.3.0",
+    "@types/capitalize": "^2.0.2",
     "@types/lodash": "^4.14.202",
     "@types/node": "16.11.7",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "obsidian": "latest",
