--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@rollup/plugin-commonjs": "21.0.1",
     "@rollup/plugin-node-resolve": "13.0.6",
     "@rollup/plugin-typescript": "8.3.0",
-    "@types/capitalize": "^2.0.2",
     "@types/lodash": "^4.14.202",
     "@types/node": "16.11.7",
     "@types/react": "^18.2.55",
@@ -33,11 +32,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "@uidotdev/usehooks": "^2.4.1",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.7",
-    "capitalize": "^2.0.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   }
 }
